# routes/usersRoute.js
@@ -7,7 +7,7 @@ const usersController = require('../controllers/usersController')
 
 router.get('/', usersController.getAllUsers);
 
-router.get('/search/:query',  usersController.getUserByName);
+//router.get('/search/:query',  usersController.getUserByName);
 
 router.get('/:id',  usersController.getOneUser);
 
